competition_infra/ctfg_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctfg-ingress
  namespace: mcpshsf
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.global-static-ip-name: 34.125.64.174
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - ctf.mcpshsf.com
    secretName: ctfg-cert-secret
  rules:
  - host: ctf.mcpshsf.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: ctfg
            port:
              number: 8000
